# neptune

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  libneptune-opi.cfg  link-dependencies.sh
.github/workflows/: cmake.yml
documentation/00-Templates/: commands.tex  glossary.tex  literature.bib  tikz-styles.tex
documentation/00-Templates/neptune_logo/: icon.eps  logo.eps
documentation/01-NEPTUNE/: Makefile  ilrtubs.cls  intro.tex  neptune.tex  propagation.tex  validation.tex
documentation/01-NEPTUNE/02-Propagation/: coordinates.tex  covariance.tex  noise.tex  satmodel.tex  state.tex
documentation/01-NEPTUNE/07-Tikz/: Numint-accdiscont.tex  Numint-srpacc.tex  act-3dgrid.tex  act-crf.tex  act-generation.tex  act_example_geo_alt-mean.tex  act_example_geo_force.tex  act_example_meo_alt-raan.tex  act_example_meo_force.tex  data-format-loop.tex  data-format-sss.tex  diff-corr-delta.tex  eigen-gl04c_coefficients.tex  ers1dc-medBC.tex  ers1dc.tex  gcrf2itrf.tex  interpolation3dGeo.tex  interpolation3dLeo.tex  interpolationErrorSSO.tex  manoeuvre-model.tex  nodeSelection.tex  runge.tex  satModelBoxVsNoBox.tex  satModelSolarArray.tex  stable-legendre.tex  tidesExample.tex  unstable-legendre.tex  valers1-highBC.tex  valers1_medBC.tex  valjas_1.tex
documentation/01-NEPTUNE/07-Tikz/data/: 3dGEO_r01.sum  comp3.out.along  comp3.out.cross  comp3.out.radial  drag-test_aop.sup  drag-test_ball.sup  drag-test_ecc.sup  drag-test_inc.sup  drag-test_raan.sup  drag-test_sma.sup  ers1-medBC.dcu  ers1-medBC.dcv  ers1-medBC.dcw  ers1.dcu  ers1.dcv  ers1.dcw  oceanTideVs2body.out  oceanTideVs2body.red.out  solidTideVs2body.out  solidTideVs2body.red.out
documentation/01-NEPTUNE/graphics/: SRPandERP.rad.crp  SRPnoERP.rad.crp  albedoModel.tex  capsRings.tex  jasonExampleA.tex  jasonExampleB.tex  jasonExampleC.tex  jasonExampleD.tex  noSRPnoERP.rad.crp  valers1_1.tex
documentation/02-Doxygen/: .gitignore  nepdoc.cfg
documentation/02-Doxygen/nepdoc/intro/: mainpage.txt
src/: CMakeLists.txt  JB2008module.for  astroConvert.f90  atmosphere.f90  averaging.f90  correlation.f90  derivatives.f90  gravity.f90  hwm07.f90  maneuvers.f90  msis20_test.f90  msis_calc.f90  msis_gtd8d.f90  msis_init.f90  neptune-sa.f90  neptune.f90  neptuneClass.f90  neptuneClock.f90  neptuneErrorHandling.f90  neptuneOutput.f90  neptuneParameters.f90  nrlmsise00.f  nrlmsise00Class.f90  nrlmsise00Data.f90  numint.f90  openmp-test-sa.f90  propagatorschnittstelle.f90  radiation.f90  rdinp.f90  reentry.f90  satellite.f90  solarsystem.f90  thirdbody.f90  tides.f90  version.f90
tests/: CMakeLists.txt  test_GravityCov.pf  test_atmosphere.pf  test_atmosphere_Exponential.pf  test_atmosphere_JB2008.pf  test_atmosphere_msis2.pf  test_atmosphere_nrlmsis00.pf  test_gravity.pf  test_integration_propagation.pf  test_moon_reduction.pf  test_neptuneClass.pf  test_radiation.pf  test_solarsystem.pf  test_thirdbody  test_thirdbody.pf  test_tides.pf
tests/testdata/integration_propagation/: hohmann_transfer.mnv
validation/: CMakeLists.txt
validation/lro/scripts/: lro_validation.py  plot_kepler_elements.py  plot_variance.py  requirements.txt  setup_venv.sh
validation/lro/work/input/: neptune.inp  neptune.srf
validation/sentinel-1b/src/: CMakeLists.txt  rdinp.f90  rdpoe.f90  valsent.f90  valsent_set.f90
validation/sentinel-1b/work/: getPoeData.py  start_neptune_valsent1b.sh  start_neptune_valsent1b_backward.sh  start_neptune_valsent1b_forward.sh
validation/sentinel-1b/work/input/: sentinel.mnv  valsent.inp  valsent_backward.inp  valsent_forward.inp
work/: start_neptune.sh
work/data/: DTCFILE.TXT  SOLFSMY.TXT  eop19620101.txt  msis20.parm  sw19571001.txt
work/input/: neptune.inp  neptune.mnv
